PartnerDemo/src/objects/Shopping_Cart__c.object
<CustomObject>
    <description>Details about the cart of the user.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shopping Carts</relationshipLabel>
        <relationshipName>Shopping_Carts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deletion_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shopping Carts</relationshipLabel>
        <relationshipName>Shopping_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Details__c</fullName>
        <description>Address of the customer</description>
        <label>Shipping Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shopping_Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shopping Cart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Product_Id__c</columns>
        <columns>User_Id__c</columns>
        <columns>SubTotal__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Cart-{0000}</displayFormat>
        <label>Shopping Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>